@@ -73,7 +73,7 @@ public class capture_detail extends JFrame {
 		items.add("Software");
 		items.add("System");
 		items.add("Machine");
-        items.add("ClientPreference");
+        items.add("Preference");
 		items.add("Status");
 		Iterator<String> item_it = items.iterator();
 		while(item_it.hasNext()){
@@ -119,7 +119,7 @@ public class capture_detail extends JFrame {
 	public JPanel construct_bottom_panel() {
 		JPanel jp_info = new JPanel(new GridLayout(2,1,1,1));
 		String priority_str = new String(queue_name.split("@")[0]);
-		Integer priority_int = new Integer(0);
+		Integer priority_int = Integer.valueOf(0);
 		priority_int = Integer.valueOf(priority_str);
 		int task_bit_int = priority_int / 100;
 		int match_bit_int = priority_int % 100 / 10;
