@@ -9,8 +9,6 @@
  */
 package info_parser;
 
-import java.io.File;
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Set;
 import java.util.Iterator;
@@ -22,6 +20,7 @@ import org.apache.logging.log4j.Logger;
 import data_center.public_data;
 import top_runner.run_status.exit_enum;
 import utility_funcs.data_check;
+import utility_funcs.file_action;
 
 /*
  * PlatUML graph
@@ -88,21 +87,21 @@ public class cmd_parser {
 		// 3.4 suite file value
 		if (commandline_obj.hasOption('f')) {
 			String suite_file = new String(commandline_obj.getOptionValue('f'));
-			cmd_hash.put("suite_file", get_absolute_path(suite_file));
+			cmd_hash.put("suite_file", file_action.get_absolute_paths(suite_file));
 		} else {
 			cmd_hash.put("suite_file", "");
 		}
 		// 3.5 suite path value
 		if (commandline_obj.hasOption('p')) {
 			String suite_path = new String(commandline_obj.getOptionValue('p'));
-			cmd_hash.put("suite_path", get_absolute_path(suite_path));
+			cmd_hash.put("suite_path", file_action.get_absolute_paths(suite_path));
 		} else {
 			cmd_hash.put("suite_path", "");
 		}
 		// 3.6 suite list file for test suites inside
 		if (commandline_obj.hasOption('L')) {
 			String suite_path = new String(commandline_obj.getOptionValue('L'));
-			cmd_hash.put("list_file", get_absolute_path(suite_path));
+			cmd_hash.put("list_file", file_action.get_absolute_paths(suite_path));
 		} else {
 			cmd_hash.put("list_file", "");
 		}		
@@ -110,7 +109,7 @@ public class cmd_parser {
 		if (commandline_obj.hasOption('k')) {
 			cmd_hash.put("key_pattern", commandline_obj.getOptionValue('k'));
 		} else {
-			cmd_hash.put("key_pattern", public_data.CASE_KEY_PATTERN);
+			cmd_hash.put("key_pattern", public_data.CASE_USER_PATTERN + "|" + public_data.CASE_STANDARD_PATTERN);
 		}
 		// 3.8 execute file value
 		if (commandline_obj.hasOption('x')) {
@@ -149,12 +148,12 @@ public class cmd_parser {
 		// 3.14 work path
 		if (commandline_obj.hasOption('w')) {
 			String work_space = new String(commandline_obj.getOptionValue('w'));
-			cmd_hash.put("work_space", get_absolute_path(work_space));
+			cmd_hash.put("work_space", file_action.get_absolute_paths(work_space));
 		}
 		// 3.15 save path
 		if (commandline_obj.hasOption('s')) {
 			String save_space = new String(commandline_obj.getOptionValue('s'));
-			cmd_hash.put("save_space", get_absolute_path(save_space));
+			cmd_hash.put("save_space", file_action.get_absolute_paths(save_space));
 		}
 		// 3.16 test case sorting
 		if (commandline_obj.hasOption('S')) {
@@ -176,8 +175,6 @@ public class cmd_parser {
 		// 3.18 debug mode
 		if (commandline_obj.hasOption('D')) {
 			cmd_hash.put("debug", "1");
-		} else {
-			cmd_hash.put("debug", "0");
 		}
 		// 3.19 case mode
 		if (commandline_obj.hasOption('H')) {
@@ -189,15 +186,11 @@ public class cmd_parser {
 		// 3.20 case mode
 		if (commandline_obj.hasOption('K')) {
 			cmd_hash.put("keep_path", "true");
-		} else {
-			cmd_hash.put("keep_path", "false");
 		}
 		// 3.21 case mode
 		if (commandline_obj.hasOption('Z')) {
 			cmd_hash.put("lazy_copy", "true");
-		} else {
-			cmd_hash.put("lazy_copy", "false");
-		}		
+		}	
 		// 3.22 result keep value
 		if (commandline_obj.hasOption('R')) {
 			cmd_hash.put("result_keep", commandline_obj.getOptionValue('R'));
@@ -221,25 +214,11 @@ public class cmd_parser {
 		return cmd_hash;
 	}
 
-	private String get_absolute_path(
-			String raw_paths){
-		String [] path_list = raw_paths.split(",");
-		ArrayList<String> return_list = new ArrayList<String>();
-		for (String path: path_list){
-			if (path.contains("$")){
-				//Special path variable inside skip convert
-				return_list.add(path);
-				continue;
-			}
-			File raw_file = new File(path);
-			return_list.add(raw_file.getAbsolutePath().replaceAll("\\\\", "/"));
-		}
-		return String.join(",", return_list);
-	}
+
 	
 	private Boolean run_input_data_check(
 			HashMap<String, String> cmd_hash){
-		Boolean check_satus = new Boolean(true);
+		Boolean check_satus = Boolean.valueOf(true);
 		Iterator<String> option_it = cmd_hash.keySet().iterator();
 		while(option_it.hasNext()){
 			String option_name = option_it.next();
@@ -319,7 +298,7 @@ public class cmd_parser {
 				.desc("Test suites list file for Local run")
 				.build());
 		options_obj.addOption(Option.builder("k").longOpt("key-pattern").hasArg()
-				.desc("The key pattern to help client identify case in a given path, regexp supportted, default value:" + public_data.CASE_KEY_PATTERN)
+				.desc("The key pattern to help client identify case, regexp supportted, default value:" + public_data.CASE_USER_PATTERN + "|" + public_data.CASE_STANDARD_PATTERN)
 				.build());
 		options_obj.addOption(Option.builder("H").longOpt("hold-case")
 				.desc("Case mode:Hold case in it's original path(depot space) and run it in that place")
@@ -370,7 +349,7 @@ public class cmd_parser {
 	 * print help message
 	 */
 	private void get_help(Options options_obj) {
-		String usage = "[clientc.exe|client|java -jar client.jar] [-h|-D] [-c|-g|-I] [-U] [-r | -l (-f <file_path1,file_path2>|-p <dir_path1,dir_path2> -k <key_pattern> -x <exe_file> [-a arguments] [-S option1=value1] [-d dat-file] | -L <list_file>)] [-H|-C [-K|-Z]] [-e|E <env1=value1,env2=value2...>] [-i <all, software,system,machine>] [-t 3|-A] [-T 6]  [-w <work path>] [-s <save path>]";
+		String usage = "[clientc.exe|client|java -jar client.jar] [-h|-D] [-c|-g|-I] [-U] [-r | -l (-f <file_path1,file_path2>|-p <dir_path1,dir_path2> [-k <key_pattern>] [-x <exe_file>] [-a arguments] [-S option1=value1] [-d dat-file] | -L <list_file>)] [-H|-C [-K|-Z]] [-e|E <env1=value1,env2=value2...>] [-i <all, software,system,machine>] [-t 3|-A] [-T 6]  [-w <work path>] [-s <save path>]";
 		String header = "Here is the details:\n\n";
 		String footer = "\nPlease report issues at Jason.Wang@latticesemi.com";
 		HelpFormatter formatter = new HelpFormatter();
