@@ -1,14 +1,17 @@
 package utility_funcs;
  
 import java.security.SecureRandom;
+import java.util.Base64;
+import java.util.Base64.Encoder;
+
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 
-import sun.misc.BASE64Encoder;
- 
-@SuppressWarnings("restriction")
+import data_center.public_data;
+
+
 public class des_encode {
     private final static String DES = "DES";
     //public final static String key = "@Lattice";
@@ -23,8 +26,9 @@ public class des_encode {
 
 	public static String encrypt(String data, String key) throws Exception {
         byte[] bt = encrypt(data.getBytes(), key.getBytes());
-        String strs = new BASE64Encoder().encode(bt);
-        return strs;
+        Encoder encoder = Base64.getEncoder();
+        String result = encoder.encodeToString(bt);
+        return result;
     }
 
     /**
@@ -47,6 +51,6 @@ public class des_encode {
     
     public static void main(String[] args) throws Exception {
         String data = "public_+_lattice";
-        System.out.println(encrypt(data, "@Lattice"));
+        System.out.println(encrypt(data, public_data.ENCRY_KEY));
     }
 }
